2016-08-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/charscl.h
	  Fix the failure of building ucsim on MacOS.
	* support/regression/tests/gcc-torture-execute-string-opt-18.c
	* support/regression/tests/string.c
	  Disable several tests on MacOS.

2016-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/memmove.s:
	  pop af correctness for tlcs90.

2016-08-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/get_ticks.py: parse the byte count more robustly
	  (buffering on stderr vs stdout sometimes jumbling text)

2016-08-05 Erik Petrich <epetrich AT ivorytower.normna.ok.us>

	* src/SDCCcse.c (ifxOptimize): fixed bug #2484
	* src/z80/gen.c (ld_cost): fixed bug #2399

2016-08-04 Erik Petrich <epetrich AT ivorytower.normna.ok.us>

	* src/SDCCast.c (decorateTree, optimizeCompare): fixed bug #2503
	  and an unreported bug similar to bug #2529
	* support/regression/tests/bug-2503: added test
	* src/SDCClospre.hpp (forward_lospre_assignment): fixed bug #2510

2016-08-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcflow.c (eBBSuccessors),
	* src/SDCCloop.c (addPostLoopBlock): fixed bug #2453
	* support/regression/tests/bug-2453: added test

2016-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tlcs90/setjmp.s,
	  device/lib/tlcs90/memmove.s:
	  Avoid messing up interrupt flags via pop af.

2016-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_strstr.c:
	  Fix a warning.
	* src/SDCCmain.c:
	  Fix usage info, patch #274.
	* src/SDCCtree_dec.hpp:
	  Fix isolation of redundant nodes in the tree-decomposition.

2016-08-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): Recompute data flow if any outgoing
	  expressions have been changed (fixed bug #2495)
	* src/hc08/gen.c (genCopy),
	* src/hc08/ralloc.c (packPointerOp): fixed bug #2357